[package]
name = "pingsix"
version = "0.2.0"
edition = "2021"
authors = ["zhu327 <zhu327@gmail.com>"]

[dependencies]
async-trait = "0.1.83"
bytes = "1.8.0"
futures = "0.3.31"
hickory-resolver = "0.24.1"
http = "1.1.0"
matchit = "0.8.5"
once_cell = "1.20.2"
prometheus = "0.13.4"
regex = "1.11.1"
sentry = "0.26"
serde = { version = "1.0.197", features = ["derive"] }
serde_yaml = "0.9.34"
tokio = "1.41.1"
validator = { version = "0.18.1", features = ["derive"] }
spdlog-rs = { version = "0.4.0", features = ["log", "multi-thread","flexible-string"] }
TinyUFO = "0.4.0"
#pingora = {  version = "0.4.0", default-features = false, features = ["lb", "openssl", "sentry","cache"] }
#pingora-core = {  version = "0.4.0"}
#pingora-error ={  version = "0.4.0"}
#pingora-http = {  version = "0.4.0"}
#pingora-limits = {  version = "0.4.0"}
#pingora-load-balancing = {  version = "0.4.0"}
#pingora-proxy ={  version = "0.4.0"}
#pingora-runtime = {  version = "0.4.0" }
#pingora-cache ={  version = "0.4.0"}
pingora = {  path = "../pingora/pingora", default-features = false, features = ["lb", "openssl", "sentry","cache"] }
pingora-core = {  path = "../pingora/pingora-core"}
pingora-error ={  path = "../pingora/pingora-error"}
pingora-http = {  path = "../pingora/pingora-http"}
pingora-limits = {  path = "../pingora/pingora-limits"}
pingora-load-balancing = {  path = "../pingora/pingora-load-balancing"}
pingora-proxy ={  path = "../pingora/pingora-proxy"}
pingora-runtime = {  path = "../pingora/pingora-runtime"}
pingora-cache ={  path = "../pingora/pingora-cache"}
#

[profile.release]
opt-level = "z"
strip = true
lto = true
codegen-units = 1
panic = "abort"
split-debuginfo = "off"
