[package]
name = "pingsix"
version = "0.2.0"
edition = "2021"
authors = ["zhu327 <zhu327@gmail.com>"]

[dependencies]
async-trait = "0.1"
bytes = "1.8"
futures = "0.3"
hickory-resolver = "0.24"
http = "1"
matchit = "0.8"
once_cell = "1"
pingora = { version = "0.4", features = ["openssl", "sentry"] }
pingora-core = "0.4.0"
pingora-error = "0.4.0"
pingora-http = "0.4.0"
pingora-limits = "0.4.0"
pingora-load-balancing = "0.4.0"
pingora-proxy = "0.4.0"
pingora-runtime = "0.4.0"
prometheus = "0.13"
regex = "1"
sentry = "0.26"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9.34"
tokio = "1.41.1"
validator = { version = "0.18", features = ["derive"] }
spdlog-rs = { version = "0.4", features = ["log", "multi-thread","flexible-string"] }

[profile.release]
opt-level = 3
strip = true
lto = true
codegen-units = 1
panic = "abort"
split-debuginfo = "off"
